config/argo-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: argo-ingress
  namespace: argo
  annotations:
          #nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: argo.13.49.225.52.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
                serviceName: argo-server
                servicePort: 2746
