config/minio-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: default
spec:
  rules:
    - host: minio.13.49.225.52.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
                serviceName: minio
                servicePort: 9000
